--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
-Coming soon.
+<html>
+	<head>
+		<title>Gwen Brinsmead</title>
+		<meta charset="UTF-8">
+		<link rel="stylesheet" href="style.css">
+		<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
+	</head>
+	<body>
+		<div class="wrapper">
+			<div class="image"><img src="gwen.png" alt=""></div>
+			<div class="about">
+				<p>I dig computers. Big time. Right now I'm using them to design <a href="http://www.youtube.com/watch?v=Ovj4hFxko7c">experiences</a>.</p>
+				<p>You can see my design work on my <a href="http://cargocollective.com/gwen">Portfolio</a> and <a href="http://dribbble.com/GwenBrin">Dribbble</a>. I post images that inspire me on <a href="http://inspire-gwen.tumblr.com/">Tumblr</a> and recommend articles I like on <a href="http://medium.com/@GwenBrin">Medium</a>. I enjoy teaching workshops with <a href="http://www.meetup.com/Girl-Develop-It-San-Francisco/">Girl Develop It</a> in SF.</p>
+				<p>You can connect with me via <a href="http://www.linkedin.com/in/gwenbrin">LinkedIn</a>, <a href="http://www.facebook.com/gwenbrinsmead">Facebook</a>, and <a href="http://twitter.com/GwenBrin">Twitter</a>. Or you can just shoot me an <a href="mailto:gwenbrin@gmail.com?Subject=Hello">Email</a>. I'd love to chat!</p>
+			</div>
+			<div class="sig"><img src="sig.png" alt="- Gwen"></div>
+<!-- 			<div class="nav"><nav>
+				<ul>
+					<li><a href="http://cargocollective.com/gwen">Portfolio</a></li>
+					<li><a href="http://medium.com/@GwenBrin">Medium</a></li>
+					<li><a href="http://inspire-gwen.tumblr.com/">Inspiration</a></li>
+					<li><a href="http://dribbble.com/GwenBrin">Dribbble</a></li>
+					<li><a href="http://www.linkedin.com/in/gwenbrin">LinkedIn</a></li>
+					<li><a href="http://www.facebook.com/gwenbrinsmead">Facebook</a></li>
+					<li><a href="http://twitter.com/GwenBrin">Twitter</a></li>
+				</ul>
+			</nav></div> -->
+		</div>
+	</body>
+</html>
