changed homepage copy

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 			<div class="image"><img src="gwen.png" alt=""></div>
 			<div class="about">
 				<p>I dig computers. Big time. Right now I'm using them to design <a href="http://www.youtube.com/watch?v=Ovj4hFxko7c">experiences</a>.</p>
-				<p>You can see my design work on my <a href="http://cargocollective.com/gwen">Portfolio</a> and <a href="http://dribbble.com/GwenBrin">Dribbble</a>. I post images that inspire me on <a href="http://inspire-gwen.tumblr.com/">Tumblr</a> and recommend articles I like on <a href="http://medium.com/@GwenBrin">Medium</a>. I enjoy teaching workshops with <a href="http://www.meetup.com/Girl-Develop-It-San-Francisco/">Girl Develop It</a> in SF.</p>
-				<p>You can connect with me via <a href="http://www.linkedin.com/in/gwenbrin">LinkedIn</a>, <a href="http://www.facebook.com/gwenbrinsmead">Facebook</a>, and <a href="http://twitter.com/GwenBrin">Twitter</a>. Or you can just shoot me an <a href="mailto:gwenbrin@gmail.com?Subject=Hello">Email</a>. I'd love to chat!</p>
+				<p>You can see some of my design work on <a href="http://dribbble.com/GwenBrin">Dribbble</a> and my porfolio is avaliable upon <a href="mailto:gwenbrin@gmail.com?Subject=[Portfolio Request]">request</a>. I post images that inspire me on <a href="http://inspire-gwen.tumblr.com/">Tumblr</a> and recommend articles I like on <a href="http://medium.com/@GwenBrin">Medium</a>. I enjoy teaching workshops with <a href="http://www.meetup.com/Girl-Develop-It-San-Francisco/">Girl Develop It</a> in SF.</p>
+				<p>You can connect with me via <a href="http://www.linkedin.com/in/gwenbrin">LinkedIn</a>, <a href="http://www.facebook.com/gwenbrinsmead">Facebook</a>, and <a href="http://twitter.com/GwenBrin">Twitter</a>. Or you can just shoot me an <a href="mailto:gwenbrin@gmail.com?Subject=Hello">email</a>. I'd love to chat!</p>
 			</div>
 			<div class="sig"><img src="sig.png" alt="- Gwen"></div>
 <!-- 			<div class="nav"><nav>
